[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]
radius = 44.1864

[sub_resource type="SphereShape" id=2]
radius = 20.8714

[node name="Enemy" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 2.01965, 0 )

[node name="PathRefreshTimer" type="Timer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="StunTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DetectArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="DetectArea"]
shape = SubResource( 1 )

[node name="CollisionPolygon" type="CollisionPolygon" parent="DetectArea"]
transform = Transform( -1.62921e-07, 1, -1.62921e-07, 0, -1.62921e-07, -1, -1, -1.62921e-07, 2.65431e-14, 0, 2.75, 0 )
depth = 2.0
polygon = PoolVector2Array( 0, 0, 50, 20, 50, -20 )

[node name="AttackArea" type="Area" parent="."]
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="AttackArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 2 )

[node name="Eyes" type="Spatial" parent="."]
[connection signal="timeout" from="PathRefreshTimer" to="." method="_on_PathRefreshTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_Area_body_exited"]
